Many small clean-ups in the SSL/TLS code (#12178)
Motivation:
We can make this code look a bit nicer.
Some of these things can be fixed because we now baseline on Java 11.

Modification:
Use modern Java features and fix warnings.

Result:
Simpler code.

Co-authored-by: Norman Maurer <norman_maurer@apple.com>